# FastAPI_new_app

./: .gitignore  Readme.md  main.py  pyproject.toml
assets/: openapi.json
